--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
 			border: none;
 		}
 		#promptContainer{
-			position: absolute;
-			bottom: 0.4rem;
+			position:fixed;
+			bottom: 0;
 			width: 100%;
 		}
 		#inputBox{
@@ -46,6 +46,25 @@
 			height: 1.7rem;
 			width: 1.7rem;
 			cursor: pointer;
+			margin-left: 1rem;
+		}
+		#modelsDropdown{
+			width: 8rem;
+			height: 1.5rem;
+			background-color: #2d2d2d;
+			border-radius: 0.3rem;
+			border: none;
+			text-align: center;
+		}
+		#modelsDropdown:hover{
+			background-color: #1a1a1a;
+			cursor: pointer;
+		}
+		#optionsContainer{
+			display: flex;
+			align-items: center;
+			justify-content: start;
+			padding-left: 1rem;
 		}
 
 		.response {
@@ -62,8 +81,21 @@
 		<div id="inputBox">
 			<div>
 				<textarea id="prompt" rows="3" placeholder="Ask something..."></textarea>
-				<select id="modelsDropdown"></select>
-				<button id="askButton""><img style="width: 1rem;" src="./static/btn.svg" alt=""></button>
+				<div id="optionsContainer">
+					<select id="modelsDropdown">
+						<option value="" disabled selected>Select a model</option>
+						<option value="">Select a model</option>
+						<option value="">Select a model</option>
+						<option value="">Select a model</option>
+					</select>
+					<button id="askButton"">
+						<svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M7 16c-.595 0-1.077-.462-1.077-1.032V1.032C5.923.462 6.405 0 7 0s1.077.462 1.077 1.032v13.936C8.077 15.538 7.595 16 7 16z" fill="#2a2a2a"></path>
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M.315 7.44a1.002 1.002 0 0 1 0-1.46L6.238.302a1.11 1.11 0 0 1 1.523 0c.421.403.421 1.057 0 1.46L1.838 7.44a1.11 1.11 0 0 1-1.523 0z" fill="#2a2a2a"></path>
+							<path fill-rule="evenodd" clip-rule="evenodd" d="M13.685 7.44a1.11 1.11 0 0 1-1.523 0L6.238 1.762a1.002 1.002 0 0 1 0-1.46 1.11 1.11 0 0 1 1.523 0l5.924 5.678c.42.403.42 1.056 0 1.46z" fill="#2a2a2a"></path>
+						</svg>
+					</button>
+				</div>
 			</div>
 		</div>
 	</div>
@@ -95,7 +127,7 @@
 				askBtn.disabled = false;
 				currentResponseDiv = null // reset for next response
 			} else if (command == "modelsList") {
-				dropdown.innerHTML = models.map(model => '<option value="' + model + '">' + model + '</option>').join('');
+				dropdown.innerHTML = '<option value="" disabled selected>Select a model</option>' + models.map(model => '<option value="' + model + '">' + model + '</option>').join('');
 			}
 		})
 	</script>
