--- a/src/webview.html
+++ b/src/webview.html
@@ -72,7 +72,11 @@
 		}
 
 		.response {
-			border: 1px solid #ccc;
+			font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+			font-size: 1rem;
+  			line-height: 1.75;
+			background-color: #2d2d2d;
+			border-radius: 1rem;
 			margin-top: 1rem;
 			padding: 0.5rem;
 		}
@@ -88,9 +92,6 @@
 				<div id="optionsContainer">
 					<select id="modelsDropdown">
 						<option value="" disabled selected>Select a model</option>
-						<option value="">Select a model</option>
-						<option value="">Select a model</option>
-						<option value="">Select a model</option>
 					</select>
 					<button id="askButton"">
 						<svg width="14" height="16" viewBox="0 0 14 16" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -103,7 +104,9 @@
 			</div>
 		</div>
 	</div>
-	<div id="chatsContainer"></div>
+	<div id="chatsContainer">
+		<div class="response"></div>
+	</div>
 	<script>
 		const vscode = acquireVsCodeApi();
 		const askBtn = document.getElementById("askButton");
