added some finishing touches

--- a/src/webview.html
+++ b/src/webview.html
@@ -80,6 +80,9 @@
 			margin-top: 1rem;
 			padding: 0.5rem;
 		}
+		#loading{
+			margin-top: 1rem;
+		}
 	</style>
 </head>
 
@@ -104,9 +107,7 @@
 			</div>
 		</div>
 	</div>
-	<div id="chatsContainer">
-		<div class="response"></div>
-	</div>
+	<div id="chatsContainer"></div>
 	<script>
 		const vscode = acquireVsCodeApi();
 		const askBtn = document.getElementById("askButton");
